# PS5NorModifier

NewPS5ModifierQt/: .gitignore  CMakeLists.txt
NewPS5ModifierQt/qml/: Main.qml  StyledButton.qml  ThemeToggleSwitch.qml
NewPS5ModifierQt/src/: backend.cpp  backend.h  main.cpp
